# library_backend_nfact

./: Dockerfile  README.md  db.sqlite3  entrypoint.sh  pyproject.toml  railway.json
api/: urls.py
api/books/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
api/books/migrations/: 0001_initial.py  0002_initial.py  0003_book_views_count.py  0004_rename_views_count_book_view_count.py
api/chatapp/: apps.py  models.py  serializers.py  views.py
api/chatapp/migrations/: 0001_initial.py
api/networks/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
api/networks/migrations/: 0001_initial.py
api/users/: models.py  permissions.py  serializers.py  urls.py  views.py
api/users/migrations/: 0001_initial.py
core/: settings.py  urls.py
